--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 <link rel="stylesheet" href="src/normalise.css" />
 <link rel="stylesheet" href="src/prydonian.css" />
 <style>
+.container {
+	width: 100%;
+	max-width: 62.5rem;
+	padding: 0 var(--pm-xlarge);
+	margin: 0 auto;
+}
 section {
 	padding: 0 0 var(--pm-xxlarge) 0;
 	margin: 0 0 var(--pm-xxlarge) 0;
