--- a/index.html
+++ b/index.html
@@ -114,8 +114,13 @@ section {
 			<input type="text" class="big" id="input" placeholder="Big input" />
 		</p>
 		<p>Regular buttons &amp; colours
-			<div>
+			<div class="space">
 				<button>Button</button> <button class="primary">Primary</button> <button class="secondary">Secondary</button> <button class="info">Info</button> <button class="alert">Alert</button> <button class="attention">Attention</button> <button class="dark">Dark</button>
+			</div>
+		</p>
+		<p>Hollow buttons &amp; colours
+			<div class="space">
+				<button class="hollow">Button</button> <button class="hollow primary">Primary</button> <button class="hollow secondary">Secondary</button> <button class="hollow info">Info</button> <button class="hollow alert">Alert</button> <button class="hollow attention">Attention</button> <button class="hollow dark">Dark</button>
 			</div>
 		</p>
 		<p>Sized buttons
