--- a/index.html
+++ b/index.html
@@ -151,6 +151,33 @@ section {
 				<select><option>Mr</option><option>Mrs</option><option>Miss</option><option>Ms</option></select><input type="text" placeholder="Name" /><button>Submit</button>
 			</div>
 		</p>
+		<form>
+			<fieldset>
+				<legend>Form</legend>
+				<div class="form-fields">
+					<label for="name">Name</label>
+					<input type="text" id="name" placeholder="Name" />
+				</div>
+				<div class="form-fields">
+					<label for="address">Address</label>
+					<input type="text" id="address" placeholder="Address line 1" />
+					<input type="text" id="address2" placeholder="Address line 2" />
+					<input type="text" id="address3" placeholder="City" />
+					<input type="text" id="address4" placeholder="Postcode" />
+				</div>
+				<div class="form-fields">
+					<label for="phone">Phone</label>
+					<input type="tel" id="phone" placeholder="Phone #" />
+				</div>
+				<div class="form-fields">
+					<label for="email">Email</label>
+					<input type="email" id="email" placeholder="Email address" />
+				</div>
+				<div class="form-fields text-right">
+					<input type="submit" value="Submit" />
+				</div>
+			</fieldset>
+		</form>
 	</section>
 	<section>
 		<h2 class="subtle">Messages <code>&lt;div class="message"&gt;&lt;/div&gt;</code></h2></h2>
