--- a/index.html
+++ b/index.html
@@ -209,9 +209,125 @@ section {
 		</p>
 	</section>
 	<section>
-		<h2 class="subtle">Badges <code>&lt;span class="badge"&gt;&lt;/span&gt;</code></h2></h2>
+		<h2 class="subtle">Badges <code>&lt;span class="badge"&gt;&lt;/span&gt;</code></h2>
 		<p>Lorem ipsum dolor sit <span class="badge alert">amet</span>, consectetur adipiscing elit. Aenean <span class="badge attention">blandit magna</span> sed velit iaculis tincidunt. Nulla nec pulvinar dui. Aenean sit amet ex ac elit consequat elementum. Fusce posuere non felis sit amet <span class="badge secondary">gravida</span>. Phasellus bibendum dui vel <span class="badge dark">bibendum posuere</span>. Mauris nec <span class="badge">dignissim</span> elit. Etiam ultricies enim sed magna ornare hendrerit. Curabitur in <span class="badge primary">euismod</span> enim, sit amet fringilla leo. Integer consequat <span class="badge info">tellus efficitur</span> pretium rutrum. In nibh tortor, feugiat sollicitudin aliquet in, vulputate vitae odio.</p>
 	</section>
+	<section>
+		<h2 class="subtle">Tables <code>&lt;table&gt;</code></h2>
+		<p>Normal</p>
+		<table>
+			<tr>
+				<th>Header</th>
+				<th>Header</th>
+				<th>Header</th>
+			</tr>
+			<tr>
+				<td>Cell</td>
+				<td>Cell</td>
+				<td>Cell</td>
+			</tr>
+			<tr>
+				<td>Cell</td>
+				<td>Cell</td>
+				<td>Cell</td>
+			</tr>
+			<tr>
+				<td>Cell</td>
+				<td>Cell</td>
+				<td>Cell</td>
+			</tr>
+			<tr>
+				<td>Cell</td>
+				<td>Cell</td>
+				<td>Cell</td>
+			</tr>
+		</table>
+		<p>Stripe</p>
+		<table class="stripe">
+			<tr>
+				<th>Header</th>
+				<th>Header</th>
+				<th>Header</th>
+			</tr>
+			<tr>
+				<td>Cell</td>
+				<td>Cell</td>
+				<td>Cell</td>
+			</tr>
+			<tr>
+				<td>Cell</td>
+				<td>Cell</td>
+				<td>Cell</td>
+			</tr>
+			<tr>
+				<td>Cell</td>
+				<td>Cell</td>
+				<td>Cell</td>
+			</tr>
+			<tr>
+				<td>Cell</td>
+				<td>Cell</td>
+				<td>Cell</td>
+			</tr>
+		</table>
+		<p>Border</p>
+		<table class="border">
+			<tr>
+				<th>Header</th>
+				<th>Header</th>
+				<th>Header</th>
+			</tr>
+			<tr>
+				<td>Cell</td>
+				<td>Cell</td>
+				<td>Cell</td>
+			</tr>
+			<tr>
+				<td>Cell</td>
+				<td>Cell</td>
+				<td>Cell</td>
+			</tr>
+			<tr>
+				<td>Cell</td>
+				<td>Cell</td>
+				<td>Cell</td>
+			</tr>
+			<tr>
+				<td>Cell</td>
+				<td>Cell</td>
+				<td>Cell</td>
+			</tr>
+		</table>
+		<p>Hover</p>
+		<table class="hover">
+			<tr>
+				<th>Header</th>
+				<th>Header</th>
+				<th>Header</th>
+			</tr>
+			<tr>
+				<td>Cell</td>
+				<td>Cell</td>
+				<td>Cell</td>
+			</tr>
+			<tr>
+				<td>Cell</td>
+				<td>Cell</td>
+				<td>Cell</td>
+			</tr>
+			<tr>
+				<td>Cell</td>
+				<td>Cell</td>
+				<td>Cell</td>
+			</tr>
+			<tr>
+				<td>Cell</td>
+				<td>Cell</td>
+				<td>Cell</td>
+			</tr>
+		</table>
+	</section>
+
 </div>
 </body>
 </html>
