--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ section {
 		<p>Lorem ipsum dolor sit amet, consemitctetur adipiscing elit. Aenean blandit magna sed velit iaculis tincidunt. Nulla nec pulvinar dui. Aenean sit amet ex ac elit consequat elementum. Fusce posuere non felis sit amet gravida. Phasellus bibendum dui vel bibendum posuere. Mauris nec dignissim elit. Etiam ultricies enim sed magna ornare hendrerit. Curabitur in euismod enim, sit amet fringilla leo. Integer consequat tellus efficitur pretium rutrum. In nibh tortor, feugiat sollicitudin aliquet in, vulputate vitae odio.</p>
 		<p>Nunc eget tristique lorem. Mauris maximus elementum arcu et tristique. Donec dui tortor, maximus quis ipsum eget, ultricies porttitor orci. Vestibulum non ante massa. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus tempor ante vitae ante consectetur, et facilisis turpis feugiat. Etiam ut sodales ipsum. Sed ultricies, magna ac consequat molestie, neque mauris feugiat libero, pretium bibendum tortor sapien id nisi.</p>
 		<h2 class="subtle">Links <code>&lt;a&gt;</code></h2>
-		<p><a href="#">link</a></p>
+		<p><a href="#link">link</a></p>
 		<h2 class="subtle">Blockquote <code>&lt;blockquote&gt;</code></h2>
 		<p><blockquote>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean blandit magna sed velit iaculis tincidunt. Nulla nec pulvinar dui. Aenean sit amet ex ac elit consequat elementum.<cite>Someone</cite></blockquote></p>
 		<h2 class="subtle">Code <code>&lt;code&gt;</code></h2>
@@ -183,28 +183,28 @@ section {
 		<h2 class="subtle">Messages <code>&lt;div class="message"&gt;&lt;/div&gt;</code></h2></h2>
 		<p>
 			<div class="message">
-				This is a default message box
+				This is a default message box <a href="#link">link</a>
 			</div>
 			<div class="message primary">
-				This is a primary message box
+				This is a primary message box <a href="#link">link</a>
 			</div>
 			<div class="message alert">
-				This is an alert message box
+				This is an alert message box <a href="#link">link</a>
 			</div>
 			<div class="message secondary">
-				This is a secondary message box
+				This is a secondary message box <a href="#link">link</a>
 			</div>
 			<div class="message info">
-				This is an info message box
+				This is an info message box <a href="#link">link</a>
 			</div>
 			<div class="message alert">
-				This is an alert message box
+				This is an alert message box <a href="#link">link</a>
 			</div>
 			<div class="message attention">
-				This is an attention message box
+				This is an attention message box <a href="#link">link</a>
 			</div>
 			<div class="message dark">
-				This is a dark message box
+				This is a dark message box <a href="#link">link</a>
 			</div>
 		</p>
 	</section>
