--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	max-width: 62.5rem;
 	padding: 0 var(--pm-xlarge);
 	margin: 0 auto;
+	display: grid;
 }
 section {
 	padding: 0 0 var(--pm-xxlarge) 0;
@@ -20,6 +21,7 @@ section {
 	padding-bottom: 0.5rem;
 }
 </style>
+<script src="https://use.fontawesome.com/bfa003177d.js"></script>
 </head>
 <body>
 <a href="https://github.com/PrydonianDigital/Prydonian-CSS"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a>
@@ -142,13 +144,13 @@ section {
 		</p>
 		<p>Form Group
 			<div class="group">
-				<input type="text" placeholder="First Name" /><input type="text" placeholder="Last Name" /><button>Submit</button>
+				<input type="text" placeholder="First Name" /><input type="text" placeholder="Last Name" /><button class="attention">Submit</button>
 			</div>
 			<div class="group">
-				<span>&pound;</span><input type="text" placeholder="Credit Card #" /><input type="text" placeholder="Expiry MM/YY" /><input type="Submit" value="Pay Now" />
+				<span>&pound;</span><input type="text" placeholder="Credit Card #" /><input type="text" placeholder="Expiry MM/YY" /><input type="Submit" value="Pay Now" class="primary" />
 			</div>
 			<div class="group">
-				<select><option>Mr</option><option>Mrs</option><option>Miss</option><option>Ms</option></select><input type="text" placeholder="Name" /><button>Submit</button>
+				<select><option>Mr</option><option>Mrs</option><option>Miss</option><option>Ms</option></select><input type="text" placeholder="Name" /><button class="secondary">Submit</button>
 			</div>
 		</p>
 		<form>
@@ -174,37 +176,37 @@ section {
 					<input type="email" id="email" placeholder="Email address" />
 				</div>
 				<div class="form-fields text-right">
-					<input type="submit" value="Submit" />
+					<input type="submit" value="Submit" class="alert" />
 				</div>
 			</fieldset>
 		</form>
 	</section>
 	<section>
-		<h2 class="subtle">Messages <code>&lt;div class="message"&gt;&lt;/div&gt;</code></h2></h2>
+		<h2 class="subtle">Messages <code>&lt;div class="message"&gt;&lt;/div&gt;</code></h2>
 		<p>
 			<div class="message">
-				This is a default message box <a href="#link">link</a>
+				<i class="fa fa-exclamation-triangle"></i> This is a default message box <a href="#link">link</a>
 			</div>
 			<div class="message primary">
-				This is a primary message box <a href="#link">link</a>
+				<i class="fa fa-exclamation-triangle"></i> This is a primary message box <a href="#link">link</a>
 			</div>
 			<div class="message alert">
-				This is an alert message box <a href="#link">link</a>
+				<i class="fa fa-exclamation-triangle"></i> This is an alert message box <a href="#link">link</a>
 			</div>
 			<div class="message secondary">
-				This is a secondary message box <a href="#link">link</a>
+				<i class="fa fa-exclamation-triangle"></i> This is a secondary message box <a href="#link">link</a>
 			</div>
 			<div class="message info">
-				This is an info message box <a href="#link">link</a>
+				<i class="fa fa-exclamation-triangle"></i> This is an info message box <a href="#link">link</a>
 			</div>
 			<div class="message alert">
-				This is an alert message box <a href="#link">link</a>
+				<i class="fa fa-exclamation-triangle"></i> This is an alert message box <a href="#link">link</a>
 			</div>
 			<div class="message attention">
-				This is an attention message box <a href="#link">link</a>
+				<i class="fa fa-exclamation-triangle"></i> This is an attention message box <a href="#link">link</a>
 			</div>
 			<div class="message dark">
-				This is a dark message box <a href="#link">link</a>
+				<i class="fa fa-exclamation-triangle"></i> This is a dark message box <a href="#link">link</a>
 			</div>
 		</p>
 	</section>
