--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ section {
 				<input type="text" placeholder="First Name" /><input type="text" placeholder="Last Name" /><button class="attention">Submit</button>
 			</div>
 			<div class="group">
-				<span>&pound;</span><input type="text" placeholder="Credit Card #" /><input type="text" placeholder="Expiry MM/YY" /><input type="Submit" value="Pay Now" class="primary" />
+				<span><i class="fa fa-credit-card" aria-hidden="true"></i></span><input type="text" placeholder="Credit Card #" /><input type="text" placeholder="Expiry MM/YY" /><input type="Submit" value="Pay Now" class="primary" />
 			</div>
 			<div class="group">
 				<select><option>Mr</option><option>Mrs</option><option>Miss</option><option>Ms</option></select><input type="text" placeholder="Name" /><button class="secondary">Submit</button>
