--- a/index.html
+++ b/index.html
@@ -146,6 +146,11 @@ section {
 				<button class="full big">Big button</button>
 			</div>
 		</p>
+		<p>Progress
+			<div class="space">
+				<progress max="100" value="75"></progress>
+			</div>
+		</p>
 		<p>Form Group
 			<div class="group">
 				<input type="text" placeholder="First Name" /><input type="text" placeholder="Last Name" /><button class="attention">Submit</button>
@@ -154,7 +159,7 @@ section {
 				<span><i class="fa fa-credit-card" aria-hidden="true"></i></span><input type="text" placeholder="Credit Card #" /><input type="text" placeholder="Expiry MM/YY" /><input type="Submit" value="Pay Now" class="primary" />
 			</div>
 			<div class="group">
-				<select><option>Mr</option><option>Mrs</option><option>Miss</option><option>Ms</option></select><input type="text" placeholder="Name" /><button class="secondary">Submit</button>
+				<select><option>Mr</option><option>Mrs</option><option>Miss</option><option>Ms</option></select><input type="text" placeholder="Name" /><button class="alert">Submit</button>
 			</div>
 		</p>
 		<form>
