--- a/index.html
+++ b/index.html
@@ -151,6 +151,11 @@ section {
 				<progress max="100" value="75"></progress>
 			</div>
 		</p>
+		<p>Range
+			<div class="space">
+				<input type="range" />
+			</div>
+		</p>
 		<p>Form Group
 			<div class="group">
 				<input type="text" placeholder="First Name" /><input type="text" placeholder="Last Name" /><button class="attention">Submit</button>
