--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <script src="https://use.fontawesome.com/bfa003177d.js"></script>
 </head>
 <body>
-<a href="https://github.com/PrydonianDigital/Prydonian-CSS"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a>
+
 <div class="container">
 	<div class="main">
 		<section>
@@ -25,6 +25,9 @@
 		</section>
 		<section>
 			<a class="button info" href="docs/index.html">Documentation</a>
+		</section>
+		<section>
+			<a class="button" href="https://github.com/PrydonianDigital/Prydonian-CSS" target="_blank"><i class="fa fa-github" aria-hidden="true"></i> Fork on GitHub</a> <a class="button" href="https://github.com/PrydonianDigital/Prydonian-CSS/releases" target="_blank"><i class="fa fa-cloud-download" aria-hidden="true"></i> Download</a>
 		</section>
 	</div>
 </div>
