--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <div class="container">
 	<div class="main">
-		<section>
+		<section class="header">
 			<h1>Prydonian CSS</h1>
 		</section>
 		<section>
