--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 			<a class="button info" href="docs/index.html">Documentation</a>
 		</section>
 		<section>
-			<a class="button" href="https://github.com/PrydonianDigital/Prydonian-CSS" target="_blank"><i class="fa fa-github" aria-hidden="true"></i> Fork on GitHub</a> <a class="button" href="https://github.com/PrydonianDigital/Prydonian-CSS/releases" target="_blank"><i class="fa fa-cloud-download" aria-hidden="true"></i> Download</a>
+			<div class="group">
+			<a class="button" href="https://github.com/PrydonianDigital/Prydonian-CSS" target="_blank"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a> <a class="button" href="https://github.com/PrydonianDigital/Prydonian-CSS/releases" target="_blank"><i class="fa fa-cloud-download" aria-hidden="true"></i> Download</a> <a class="button" href="https://github.com/PrydonianDigital/Prydonian-CSS/fork" target="_blank"><i class="fa fa-code-fork" aria-hidden="true"></i> Fork</a> <a class="button" href="https://github.com/PrydonianDigital/Prydonian-CSS/issues" target="_blank"><i class="fa fa-exclamation-circle" aria-hidden="true"></i> Issue</a>
+			</div>
 		</section>
 	</div>
 </div>
