--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<p>It doesn't include anything like a layout or grid system, just a set of controls for various HTML items.</p>
 		</section>
 		<section>
-			<a class="button info" href="docs/index.html">Documentation</a>
+			<a class="button info big" href="docs/index.html">Documentation</a>
 		</section>
 		<section>
 			<div class="group">
